add short icon and delet target blank

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
 						<p>Տեխնիկայի &nbsp;&bull;&nbsp; Ամբողջովին &nbsp;&bull;&nbsp; Վերանորոգում</p>
 						<nav>
 							<ul>
-								<li><a href="map.html" target="_blank" class="icon fa fa-map-marker"><span class="label">MapMarker</span></a></li>
-								<li><a href="facebook.html" target="_blank" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-								<li><a href="telefon.html" target="_blank" class="icon fa fa-mobile"><span class="label">Mobile</span></a></li>
-								<li><a href="mail.html" target="_blank" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+								<li><a href="map.html" class="icon fa fa-map-marker"><span class="label">MapMarker</span></a></li>
+								<li><a href="facebook.html" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+								<li><a href="telefon.html" class="icon fa fa-mobile"><span class="label">Mobile</span></a></li>
+								<li><a href="mail.html" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 							</ul>
 						</nav>
 					</header>
